# panary-core

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  .gitleaksignore  .npmrc  .prettierrc  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  eslint.config.mjs  lefthook.yml  migration-state.json  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  tsconfig.json
.claude/: CLAUDE.md  launch.json
.gemini/: settings.json
.github/: CODEOWNERS  dependabot.yml
apps/pos-client/src-tauri/: Cargo.toml  osv-scanner.toml  tauri.conf.json
apps/pos-client/src-tauri/icons/: icon.icns
apps/pos-client/src-tauri/src/: lib.rs
docs/: print-server-api.md
documentation/: INDEX.md  admin-bestellungen-geschaeftstag-filter.md  audit-events.md  beleg-bon-system-adr.md  cloud-pairing-wizard.md  cloud-status-badge.md  cloud-status-banner-priorisierung.md  docker-native-module-fix.md  edge-build-platforms.md  email-identity-edge-impact.md  emergency-override-adr.md  ensure-indexes-guide.md  fiskalisierung-architektur-adr.md  generator-usage-guide.md  geraete-online-tracking.md  geschaeftstag-auto-rotation.md  granulare-berechtigungen-helper.md  library-publishing.md  m2-db-agnostik-refactor.md  nx-remote-cache.md  offline-cache-architecture.md  offline-cache-smoke-test.md  order-bundle-pricing-modell.md  pos-pairing-wizard.md  print-server-api.md  rabatte.md  schema-feld-haertung.md  self-hosted-runner.md  sensitive-data-hardening.md  service-creation-guide.md  subscription-tier-modell.md  sync-run-details.md  (+4 more)
(+1257 files in other folders)
