[package]
name = "panary-pos"
version = "0.1.0"
description = "Panary POS Terminal"
authors = ["Panary"]
edition = "2021"

[lib]
name = "panary_pos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
